style.css
text {
  pointer-events: none;
}

body {
    overflow: hidden;
	  margin: 0;     /* This is used to reset any browser-default margins */
    height: 100vh; /* This is needed to overcome a Chrome bug. */
    width: 100vw;  /* As above. */
    -moz-user-select : none;
    -webkit-user-select : none;
}

.main-canvas {
	width : 100vw;
	height : 100vh;
}

line {
  stroke : #000;
}

circle, ellipse, path {
  stroke : #000;
}

rect {
  fill: #acf;
  stroke: #000;
}

path {
  fill : none;
}

text {
  stroke : #f0f;
  fill : #f0f;
}

.left-container{
  height:100%;
}

.close-btn{
  position: fixed; 
  top: 10px; 
  left: 10px;
}

